🐛 fix(server): entity neo4j